# recursion_cellular_classification

./: 01_resnet50_single_site.py  02_resnet50_dual_site.py  02_resnet50_single_site.py  03_convnext_tiny_dual_site.py  03_efficientnet_b0.py  03_inceptionv3.py  04_densenet121_no_aug.py  04_efficientnet_b0_dual_site.py  04_resnext50_32x4d.py  05_efficientnet_b3.py  05_resnet18.py  07_convnextv2.py  08_vision_transformer.py  09_arcface.py  10_resnet50_baseline.py  11_vit_base.py  12_nca.py  13_chaotic_cnn.py  14_resnet50_baseline_with_controls.py  16_resnet50_controls_msam.py  README.md  dl_proj_logs.txt  pyproject.toml
logs/: 01_resnet_baseline.txt  02_resnet50_single_site.txt  03_densenet121.txt  03_densenet_no_aug.txt  04_efficientnet.txt  05_convnextv2_nano.txt  06_vit_base_patch16_224.txt  07_chaotic_cnn_skew_tent.txt  08_chaotic_cnn_logistic.txt  09_chaotic_cnn_sine.txt  10_resnext.txt
submissions/: 01_resnet50_single_site.py
